--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "prebuild": "npx prisma generate --schema=database/prisma/schema.prisma",
+    "postinstall": "npx prisma generate --schema=database/prisma/schema.prisma",
+    "deploy": "npx prisma migrate deploy --schema=database/prisma/schema.prisma && npm run build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -92,6 +95,7 @@
     "testEnvironment": "node"
   },
   "prisma": {
-    "seed": "ts-node database/prisma/seed.ts"
+    "seed": "ts-node database/prisma/seed.ts",
+    "schema": "database/prisma/schema.prisma"
   }
 }
