--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "prisma": "6.14.0",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
