chore: scope compilation to auth module

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,6 +8,11 @@
     "src/modules/users/application",
     "src/modules/users/domain",
     "src/modules/users/infrastructure",
-    "src/modules/users/presentation"
+    "src/modules/users/presentation",
+    "src/modules/communication",
+    "src/modules/drivers",
+    "src/modules/errands",
+    "src/modules/marketplace",
+    "src/modules/security"
   ]
 }
