--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,10 +5,7 @@
     "test",
     "dist",
     "**/*spec.ts",
-    "src/modules/users/application",
-    "src/modules/users/domain",
-    "src/modules/users/infrastructure",
-    "src/modules/users/presentation",
+    "src/modules/users",
     "src/modules/communication",
     "src/modules/drivers",
     "src/modules/errands",
