--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,10 +36,7 @@
   "exclude": [
     "node_modules",
     "dist",
-    "src/modules/users/application",
-    "src/modules/users/domain",
-    "src/modules/users/infrastructure",
-    "src/modules/users/presentation",
+    "src/modules/users",
     "src/modules/communication",
     "src/modules/drivers",
     "src/modules/errands",
