--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "start:dev": "node node_modules/@nestjs/cli/bin/nest.js start --watch",
     "start:debug": "node node_modules/@nestjs/cli/bin/nest.js start --debug --watch",
     "start:prod": "node dist/main",
-    "prebuild": "npx prisma generate --schema=database/prisma/schema.prisma",
-    "postinstall": "npx prisma generate --schema=database/prisma/schema.prisma",
+    "prestart": "npm run prisma:generate",
+    "prebuild": "npm run prisma:generate",
+    "postinstall": "npm run prisma:generate",
     "deploy": "npx prisma migrate deploy --schema=database/prisma/schema.prisma && npm run build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate": "npx prisma generate --schema=database/prisma/schema.prisma"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
