feat: Add Hostinger SMTP configuration and email templates
- Configure SMTP settings for Hostinger email service (smtp.hostinger.com:465)
- Add IMAP configuration for email retrieval (imap.hostinger.com:993)
- Integrate email templates from staging branch:
  - OTP verification email template
  - Password reset email template
  - Welcome email template
- Update communication service to support template rendering with Handlebars
- Add handlebars dependency for email template compilation
- Enhance email service with context-aware template rendering

Email Configuration:
- SMTP Host: smtp.hostinger.com
- SMTP Port: 465 (SSL/TLS)
- IMAP Host: imap.hostinger.com
- IMAP Port: 993 (SSL/TLS)
- Email: ntumai@greenwebb.tech

--- a/.env
+++ b/.env
@@ -9,9 +9,20 @@ JWT_SECRET=supersecretjwt
 JWT_EXPIRATION=15m
 JWT_REFRESH_SECRET=superrefreshsecret
 JWT_REFRESH_EXPIRATION=7d
-MAIL_HOST=localhost
-MAIL_PORT=1025
-MAIL_SECURE=false
-MAIL_USER=dev@example.com
-MAIL_PASSWORD=devpassword
-MAIL_FROM=no-reply@ntumai.local
+MAIL_HOST=smtp.hostinger.com
+MAIL_PORT=465
+MAIL_SECURE=true
+MAIL_USER=ntumai@greenwebb.tech
+MAIL_PASSWORD=Nutmai.@2025
+MAIL_FROM=ntumai@greenwebb.tech
+SMTP_HOST=smtp.hostinger.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=ntumai@greenwebb.tech
+SMTP_PASS=Nutmai.@2025
+SMTP_FROM=ntumai@greenwebb.tech
+IMAP_HOST=imap.hostinger.com
+IMAP_PORT=993
+IMAP_SECURE=true
+IMAP_USER=ntumai@greenwebb.tech
+IMAP_PASS=Nutmai.@2025
