--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-validator": "^0.14.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "kafkajs": "^2.2.4",
