feat: improve Docker configuration with production-ready setup
Enhanced Dockerfile with best practices:
- Multi-stage build for optimized image size
- Non-root user (nestjs:nodejs) for security
- Prisma Client generation in build stage
- Health check endpoint monitoring
- Proper signal handling with dumb-init
- Alpine Linux base for minimal footprint
- Layer caching optimization

Added comprehensive .dockerignore:
- Excludes unnecessary files and directories
- Reduces build context size
- Improves build performance

Added docker-compose.production.yml:
- Production-ready compose configuration
- Redis service integration
- Health checks for all services
- Volume management for data persistence
- Network isolation

Added DOCKER_DEPLOYMENT_GUIDE.md:
- Complete deployment documentation
- AWS ECS/Fargate deployment guide
- Google Cloud Run instructions
- Azure Container Instances setup
- Kubernetes deployment examples
- Troubleshooting section
- Best practices and security guidelines

All Docker configurations tested and production-ready.

Docker Image Features:
✅ Security: Non-root user, minimal base image
✅ Performance: Multi-stage build, layer caching
✅ Monitoring: Health checks, proper logging
✅ Scalability: Ready for orchestration platforms

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,77 @@
+# Dependencies
 node_modules
 npm-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
+
+# Build output
 dist
-.git
-.gitignore
-README.md
+build
+.next
+out
+
+# Environment files
 .env
 .env.local
 .env.*.local
-.DS_Store
+.env.development
+.env.test
+.env.production
+
+# Git
+.git
+.gitignore
+.gitattributes
+
+# IDE
 .vscode
 .idea
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Testing
 coverage
 .nyc_output
+*.test.ts
+*.spec.ts
+test
+tests
+__tests__
+
+# Documentation
+README.md
+CHANGELOG.md
+LICENSE
+*.md
+docs
+
+# CI/CD
+.github
+.gitlab-ci.yml
+.travis.yml
+azure-pipelines.yml
+
+# Docker
+Dockerfile
+.dockerignore
+docker-compose*.yml
+
+# Logs
+logs
+*.log
+
+# Temporary files
+tmp
+temp
+.cache
+
+# Database
+*.sqlite
+*.db
+data
+
+# Prisma
+prisma/migrations
