--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -11,24 +9,25 @@ services:
     ports:
       - "${PORT:-3000}:3000"
     environment:
-      - NODE_ENV=production
-      - PORT=3000
-      - DATABASE_URL=${DATABASE_URL}
-      - DATABASE_URL_DIRECT=${DATABASE_URL_DIRECT}
-      - JWT_SECRET=${JWT_SECRET}
-      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
-      - REDIS_HOST=${REDIS_HOST:-redis}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-      - KAFKA_BROKERS=${KAFKA_BROKERS}
-      - ENABLE_KAFKA=${ENABLE_KAFKA:-false}
+      NODE_ENV: production
+      PORT: ${PORT:-3000}
+      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL_DIRECT: ${DATABASE_URL_DIRECT}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
+      REDIS_HOST: ${REDIS_HOST:-redis}
+      REDIS_PORT: ${REDIS_PORT:-6379}
+      KAFKA_BROKERS: ${KAFKA_BROKERS}
+      ENABLE_KAFKA: ${ENABLE_KAFKA:-false}
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
     networks:
       - ntumai-network
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', r => process.exit(r.statusCode===200?0:1)).on('error',()=>process.exit(1))"]
       interval: 30s
-      timeout: 3s
+      timeout: 5s
       retries: 3
       start_period: 40s
 
@@ -36,8 +35,9 @@ services:
     image: redis:7-alpine
     container_name: ntumai-redis
     restart: unless-stopped
-    ports:
-      - "6379:6379"
+    # Recommended: don't expose redis publicly in prod
+    # ports:
+    #   - "6379:6379"
     volumes:
       - redis-data:/data
     networks:
