--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -41,18 +39,23 @@ services:
   ntumai-backend:
     build: .
     environment:
-      DATABASE_URL: "postgresql://ntumai_user:ntumai_password@postgres:5432/ntumai_db"
-      KAFKA_BROKERS: "kafka:29092"
-      JWT_SECRET: "your-secret-key"
-      JWT_EXPIRATION: "24h"
-      PORT: 3000
+      NODE_ENV: production
+      PORT: ${PORT:-3000}
+      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL_DIRECT: ${DATABASE_URL_DIRECT}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
+      REDIS_HOST: ${REDIS_HOST:-redis}
+      REDIS_PORT: ${REDIS_PORT:-6379}
+      KAFKA_BROKERS: ${KAFKA_BROKERS}
+      ENABLE_KAFKA: ${ENABLE_KAFKA:-false}
     ports:
       - "3000:3000"
     depends_on:
       - postgres
       - kafka
       - redis
-    command: sh -c "npx prisma migrate deploy && node dist/main"
+    command: sh -c "bunx prisma migrate deploy && bun run start:prod"
 
 volumes:
   postgres_data:
