--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,43 +1,13 @@
 services:
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_USER: ntumai_user
-      POSTGRES_PASSWORD: ntumai_password
-      POSTGRES_DB: ntumai_db
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: production
+    container_name: ntumai-backend
+    restart: unless-stopped
     ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-  kafka:
-    image: confluentinc/cp-kafka:7.5.0
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    ports:
-      - "9092:9092"
-    depends_on:
-      - zookeeper
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.5.0
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-    ports:
-      - "2181:2181"
-
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-
-  ntumai-backend:
-    build: .
+      - "${PORT:-3000}:3000"
     environment:
       NODE_ENV: production
       PORT: ${PORT:-3000}
@@ -49,13 +19,39 @@ services:
       REDIS_PORT: ${REDIS_PORT:-6379}
       KAFKA_BROKERS: ${KAFKA_BROKERS}
       ENABLE_KAFKA: ${ENABLE_KAFKA:-false}
-    ports:
-      - "3000:3000"
     depends_on:
-      - postgres
-      - kafka
-      - redis
-    command: sh -c "bunx prisma migrate deploy && bun run start:prod"
+      redis:
+        condition: service_healthy
+    networks:
+      - ntumai-network
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', r => process.exit(r.statusCode===200?0:1)).on('error',()=>process.exit(1))"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 40s
+
+  redis:
+    image: redis:7-alpine
+    container_name: ntumai-redis
+    restart: unless-stopped
+    # Recommended: don't expose redis publicly in prod
+    # ports:
+    #   - "6379:6379"
+    volumes:
+      - redis-data:/data
+    networks:
+      - ntumai-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+
+networks:
+  ntumai-network:
+    driver: bridge
 
 volumes:
-  postgres_data:
+  redis-data:
+    driver: local
