--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,54 +1,37 @@
 services:
-  app:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
-      target: production
-    container_name: ntumai-backend
-    restart: unless-stopped
-    ports:
-      - "${PORT:-3000}:3000"
     environment:
       NODE_ENV: production
-      PORT: "${PORT:-3000}"
-      DATABASE_URL: "${DATABASE_URL}"
-      DATABASE_URL_DIRECT: "${DATABASE_URL_DIRECT}"
-      JWT_SECRET: "${JWT_SECRET}"
-      JWT_REFRESH_SECRET: "${JWT_REFRESH_SECRET}"
-      REDIS_HOST: "${REDIS_HOST:-redis}"
-      REDIS_PORT: "${REDIS_PORT:-6379}"
-      KAFKA_BROKERS: "${KAFKA_BROKERS}"
-      ENABLE_KAFKA: "${ENABLE_KAFKA:-false}"
+      PORT: 3000
+
+      # update to match your schema/provider
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/ntumai?schema=public
+
+      REDIS_URL: redis://redis:6379
     depends_on:
-      redis:
-        condition: service_healthy
-    networks:
-      - ntumai-network
-    healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', r => process.exit(r.statusCode===200?0:1)).on('error',()=>process.exit(1))"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 40s
+      - db
+      - redis
+    ports:
+      - "3000:3000"
+
+  db:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ntumai
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
   redis:
     image: redis:7-alpine
-    container_name: ntumai-redis
-    restart: unless-stopped
-    volumes:
-      - redis-data:/data
-    networks:
-      - ntumai-network
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 3s
-      retries: 3
-
-networks:
-  ntumai-network:
-    driver: bridge
+    ports:
+      - "6379:6379"
 
 volumes:
-  redis-data:
-    driver: local
+  pgdata:
