--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,30 +3,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env
     environment:
       NODE_ENV: production
       PORT: 3000
-
-      # update to match your schema/provider
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/ntumai?schema=public
-
+      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL_DIRECT: ${DATABASE_URL_DIRECT}
       REDIS_URL: redis://redis:6379
     depends_on:
-      - db
       - redis
     ports:
       - "3000:3000"
-
-  db:
-    image: postgres:16-alpine
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: ntumai
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
 
   redis:
     image: redis:7-alpine
